--- a/qml/config.json
+++ b/qml/config.json
@@ -1,6 +1,6 @@
 {
-    "title": "GopherWars",
-    "identifier": "com.yourcompany.wizardEVP.GopherWars",
+    "title": "Gopherwars",
+    "identifier": "com.yourcompany.wizardEVP.Gopherwars",
     "orientation": "landscape",
     "versioncode": 1,
     "versionname": "1.0",
