--- a/android/build.gradle
+++ b/android/build.gradle
@@ -38,7 +38,7 @@ android {
     compileSdkVersion androidCompileSdkVersion.toInteger()
     buildToolsVersion androidBuildToolsVersion
 
-    defaultConfig.applicationId = 'com.yourcompany.wizardEVP.GopherWars'
+    defaultConfig.applicationId = 'com.yourcompany.wizardEVP.Gopherwars'
 
     sourceSets {
         main {
