--- a/ios/Project-Info.plist
+++ b/ios/Project-Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
     <key>CFBundleDisplayName</key>
-    <string>GopherWars</string>
+    <string>Gopherwars</string>
     <key>CFBundleExecutable</key>
     <string>${EXECUTABLE_NAME}</string>
     <key>CFBundleIconFile</key>
@@ -25,7 +25,7 @@
         <string>Icon@2x.png</string>
     </array>
     <key>CFBundleIdentifier</key>
-    <string>com.yourcompany.wizardEVP.GopherWars</string>
+    <string>com.yourcompany.wizardEVP.Gopherwars</string>
     <key>CFBundleName</key>
     <string>${PRODUCT_NAME}</string>
     <key>CFBundlePackageType</key>
